<resources>
    <string name="app_name">CodigoElectrizante</string>
    <string name="inventario">Inventario</string>
    <string name="usuario">Username o Email</string>
    <string name="pass">Contraseña</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="google">Ingresar con Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">CodigoElectrizante</string>
    <string name="descripcion">Tu mejor solución IoT para tus problemas de inventario</string>
    <string name="registrate">Registrate</string>
    <string name="ya_tienes_cuenta">Ya tienes cuenta?</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="ingresar_a_codigoelectrizante">Ingresar a CodigoElectrizante</string>
    <string name="o_continua_con_tu_email">O continua con tu Email</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="bienvenido">Bienvenido a CodigoElectrizante</string>
</resources>