<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context="vistas.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="60dp"
            android:orientation="vertical">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="start"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="60dp"
            android:orientation="vertical"
            >
            <Button
                android:layout_width="291dp"
                android:layout_height="70dp"
                android:text="@string/registrate"
                android:textSize="30sp"
                android:textAllCaps="true"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ya_tienes_cuenta"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesi_n"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                />


        </LinearLayout>




    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu"


        />

</androidx.constraintlayout.widget.ConstraintLayout>