<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".vistas.IngresarFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".IngresarFragment">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingresar_a_codigoelectrizante"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Usuario"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:inputType="textPassword"

                android:layout_height="wrap_content"
                android:hint="Contraseña"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Iniciar Sesión" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_tienes_cuenta"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrate"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/loginStatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp" />
        </LinearLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu"
        />

</androidx.constraintlayout.widget.ConstraintLayout>